<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kikunote</string>
    <string name="tab_all">All</string>
    <string name="tab_personal">Personal</string>
    <string name="tab_work">Work</string>
    <string name="tab_study">Study</string>
    <string name="note">Note</string>
    <string name="note_is_empty">Note is empty</string>
    <string name="save">Save</string>
    <string name="note_title">Note Title</string>
    <string name="title">Title</string>
    <string name="write_a_note" tools:ignore="TypographyEllipsis">Write a note...</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="login">Login</string>
    <string name="login_title">Login page</string>
    <string name="register_title">Register page</string>
    <string name="register_button">Register</string>
    <string name="login_button">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="current_password">Current password</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit profile</string>

    //Splash Screen
    <string name="title_activity_splash_screen">Super application</string>

    <string-array name="labels">
        <item>Personal</item>
        <item>Work</item>
        <item>Study</item>
    </string-array>
</resources>