<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kikunote.activity.ProfileActivity"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/profile_nameInput"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="286dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:neumorph_shapeType="pressed">

        <EditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp"
            android:background="@null"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </soup.neumorphism.NeumorphCardView>



    <soup.neumorphism.NeumorphCardView
        android:id="@+id/profile_passwordInput"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="286dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"

        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_nameInput"
        app:neumorph_shapeType="pressed">

        <EditText
            android:id="@+id/profile_currentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp"
            android:background="@null"
            android:hint="@string/current_password"
            android:inputType="textPassword|textCapWords"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/profile_new_passwordInput"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="286dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_passwordInput"
        app:neumorph_shapeType="pressed">

    <EditText
        android:id="@+id/profile_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="12dp"
        android:background="@null"
        android:hint="@string/new_password"
        android:inputType="textPassword|textCapWords"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    </soup.neumorphism.NeumorphCardView>


    <soup.neumorphism.NeumorphCardView
        android:id="@+id/profile_confirm_passwordInput"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="286dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_new_passwordInput"
        app:neumorph_shapeType="pressed">

        <EditText
            android:id="@+id/profile_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="12dp"
            android:background="@null"
            android:hint="@string/confirm_password"
            android:inputType="textPassword|textCapWords"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </soup.neumorphism.NeumorphCardView>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>